# ai_knowledge_assistant

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/api/: chat.py  documents.py  health.py  root.py
app/core/: azure_openai_client_factory.py  config.py  logging.py
app/embeddings/: azure_openai_embedding_provider.py  base_embedding_provider.py  embedding_config.py  embedding_factory.py
app/exceptions/: bad_request_exception.py  chat_completion_exceptions.py  custom_exceptions.py  document_exceptions.py  embedding_exceptions.py  handlers.py  rag_exceptions.py  retrieval_exception.py  splitter_exceptions.py  vector_store_exception.py
app/llm/: azure_openai_chat_provider.py  base_chat_provider.py  chat_config.py  chat_factory.py
app/models/: chat_request.py  chat_response.py  chunk.py  chunk_document_response.py  document.py  document_summary.py  embedding.py  load_document_request.py  load_document_response.py
app/prompting/: base_prompt_builder.py  enterprise_prompt_builder.py  prompt_builder_factory.py  prompt_config.py
app/retrieval/: base_retriever.py  retrieval_config.py  retriever_factory.py  vector_retriever.py
app/services/: chat_service.py  chunking_service.py  embedding_services.py  health_service.py  indexing_service.py  ingestion_service.py  knowledge_base_service.py  prompt_builder_service.py  rag_services.py  (+3 more)
frontend_app/: app.py
scripts/: rebuild_index.py
tests/: test_chat_service.py  test_chunking.py  test_embeddings.py  test_indexing.py  test_prompt_builder.py  test_rag_service.py  test_retrieval.py  test_vector_store.py
(+19 files in other folders)
