[project]
name = "ai_knowledge_assistant"
version = "0.1.0"
description = "Production-ready Retrieval Augmented Generation (RAG) application for enterprise knowledge search."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "openai>=2.46.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "uvicorn>=0.51.0",
]
